--- a/css/style.css
+++ b/css/style.css
@@ -2574,6 +2574,7 @@ body {
 @media (max-width: 1200px) {
     .header > .container {
         margin: 0 10px;
+        padding: 18px 0;
     }
     .main-section__wrapper {
         flex-direction: column;
@@ -2792,7 +2793,16 @@ body {
     .product-content {
         grid-template-columns: 1fr;
     }
+    .product-content {
+        gap: 25px;
+    }
     .product-sidebar {
+        order: 1;
+    }
+    .product-content > div:first-child {
+        order: 2;
+    }
+    .product-sidebar.scrolled {
         position: fixed;
         bottom: 0;
         left: 0;
@@ -3037,3 +3047,48 @@ body {
     }
 }
 /* Adaptive styles *Start* */
+
+/* Stories *Start* */
+
+.stories-overlay {
+    display: none;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(2px);
+
+    z-index: 5;
+}
+.stories-overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.stories-overlay__prev {
+}
+.story {
+}
+.story-header {
+}
+.story-paggination {
+}
+.story-paggination__item {
+}
+.stories-overlay__close {
+}
+.story-content {
+}
+.story-content__list {
+}
+.story-content__item {
+}
+.stories-overlay__next {
+}
+
+/* Stories *Stop* */
