modified:   css/style.css

--- a/css/style.css
+++ b/css/style.css
@@ -3490,6 +3490,9 @@ body {
         top: 30px;
         right: 15px;
     }
+    .story-quiz {
+        width: 80%;
+    }
 }
 /* Adaptive styles *Start* */
 
