modified:   css/style.css 	new file:   img/section-preview-1.jpg 	new file:   img/section-preview-2.jpg 	new file:   img/section-preview-3.jpg 	modified:   index.html

--- a/css/style.css
+++ b/css/style.css
@@ -3097,7 +3097,7 @@ body {
     }
     .section-list {
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 334px;
+        grid-template-rows: 334px 334px;
     }
     .lead-list {
         grid-template-columns: 1fr;
